deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metal-enrollment
  labels:
    name: metal-enrollment
